--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,9 +1,11 @@
 {
   "branches": [
+    "+([0-9])?(.{+([0-9]),x}).x",
     "main",
     {
-      "name": "beta",
-      "prerelease": true
+      "name": "staging",
+      "channel": "beta",
+      "prerelease": "beta"
     }
   ],
   "plugins": [
@@ -11,7 +13,7 @@
       "@semantic-release/commit-analyzer",
       {
         "preset": "angular",
-               "releaseRules": [
+        "releaseRules": [
           {
             "type": "feat",
             "release": "minor"
@@ -42,6 +44,12 @@
       "@semantic-release/npm",
       {
         "npmPublish": false
+      }
+    ],
+    [
+      "@semantic-release/exec",
+      {
+        "successCmd": "echo ${nextRelease.version} > version.txt"
       }
     ],
     [
