--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 20.19.0
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run release
         env:
