--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           cache: 'npm'  # Cachea node_modules para melhorar performance
 
       - name: Install dependencies
-        run: npm ci  # mais rápido e seguro que npm install para CI
+        run: npm install  # mais rápido e seguro que npm install para CI
 
       - name: Set Git user for semantic-release
         run: |
@@ -30,5 +30,5 @@ jobs:
 
       - name: Run semantic-release
         env:
-          GH_TOKEN: ${{ secrets.TOKEN_RELEASE }}  # <- preferencial para semantic-release
+          GITHUB_TOKEN: ${{ secrets.TOKEN_RELEASE }}  # <- preferencial para semantic-release
         run: npx semantic-release
