--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,5 +30,5 @@ jobs:
 
       - name: Run semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_GENERATE }}  # <- preferencial para semantic-release
+          GH_TOKEN: ${{ secrets.RELEASE_GENERATE }}  # <- preferencial para semantic-release
         run: npx semantic-release
