--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Release CI
 
 on:
   push:
@@ -9,26 +9,19 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write # 👈 Adicione esta linha
+      issues: write
+      pull-requests: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
         with:
-          node-version: 20
-          cache: 'npm'  # Cachea node_modules para melhorar performance
-
-      - name: Install dependencies
-        run: npm install  # mais rápido e seguro que npm install para CI
-
-      - name: Set Git user for semantic-release
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-      - name: Run semantic-release
+          persist-credentials: false
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+      - run: npm install
+      - run: yarn release
         env:
-          GH_TOKEN: ${{ secrets.RELEASE_GENERATE }}  # <- preferencial para semantic-release
-        run: npx semantic-release
+          GITHUB_TOKEN: ${{ secrets.RELEASE_GENERATE }}  # <- preferencial para semantic-release
+        run:  yarn release
