--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,35 +9,7 @@
     }
   ],
   "plugins": [
-    [
-      "@semantic-release/commit-analyzer",
-      {
-        "preset": "angular",
-        "releaseRules": [
-          {
-            "type": "feat",
-            "release": "minor"
-          },
-          {
-            "type": "docs",
-            "scope": "README",
-            "release": "patch"
-          },
-          {
-            "type": "refactor",
-            "release": "patch"
-          },
-          {
-            "type": "style",
-            "release": "patch"
-          },
-          {
-            "type": "perf",
-            "release": "patch"
-          }
-        ]
-      }
-    ],
+    "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     [
@@ -55,21 +27,15 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["package.json", "CHANGELOG.md"],
+        "assets": [
+          "package.json",
+          "package-lock.json",
+          "CHANGELOG.md",
+          "version.txt"
+        ],
         "message": "chore(release): ${nextRelease.version} \n\n${nextRelease.notes}"
       }
     ],
     "@semantic-release/github"
-  ],
-  "release": {
-    "extends": "@semantic-release/gitlab-config",
-    "prepare": [
-      "@semantic-release/changelog",
-      {
-        "path": "@semantic-release/git",
-        "assets": ["package.json", "CHANGELOG.md"],
-        "message": "chore(release): ${nextRelease.version} \n\n${nextRelease.notes}"
-      }
-    ]
-  }
+  ]
 }
